src/test/deca/context/invalid/created/rule3.41/noclass.deca
// Résultat erreur:
//    Appel de méthode sur un type non-classe (règle 3.41)
//
// Description:
//    Tests de programme incorrect contextuellement (appel de méthode sur un type non-classe)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int getNombre() {
        return 5;
    }

    void maMethode() {
        int x = 5;
        int resultat = x.getNombre();
        
           }
}
